[gd_scene load_steps=86 format=3 uid="uid://d3ibake15v410"]

[ext_resource type="Texture2D" uid="uid://vsw638pyn2bi" path="res://assets/playersprites.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://cc3cykws3feop" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://dk1m03nu5od4a" path="res://scripts/camera_2d.gd" id="3_qhqgy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(512, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1024, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1536, 1024, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_3vyb7")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2560, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3072, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3584, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("1_3vyb7")
region = Rect2(512, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1024, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1536, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2048, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2560, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3072, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3584, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("1_3vyb7")
region = Rect2(4096, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("1_3vyb7")
region = Rect2(4608, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("1_3vyb7")
region = Rect2(5120, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("1_3vyb7")
region = Rect2(5632, 512, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("1_3vyb7")
region = Rect2(6144, 512, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_31cv2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": false,
"name": &"attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}],
"loop": true,
"name": &"walk",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 4096, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("1_3vyb7")
region = Rect2(512, 4096, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1024, 4096, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1536, 4096, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("1_3vyb7")
region = Rect2(512, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1024, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1536, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2048, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2560, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3072, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3584, 3072, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("1_3vyb7")
region = Rect2(512, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1024, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1536, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2048, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2560, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3072, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3584, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("1_3vyb7")
region = Rect2(4096, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("1_3vyb7")
region = Rect2(4608, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("1_3vyb7")
region = Rect2(5120, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("1_3vyb7")
region = Rect2(5632, 3584, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("1_3vyb7")
region = Rect2(6144, 3584, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_lxlsd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}],
"loop": false,
"name": &"back_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}],
"loop": true,
"name": &"back_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}],
"loop": true,
"name": &"back_walk",
"speed": 15.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("1_3vyb7")
region = Rect2(512, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_74r1k"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1024, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_8svfe"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1536, 2560, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a3c5"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_42b1b"]
atlas = ExtResource("1_3vyb7")
region = Rect2(512, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7ic4"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1024, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_au7lq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1536, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_nubpm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2048, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua5cf"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2560, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_51ujp"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3072, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk41t"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3584, 1536, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuw3a"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_8txt3"]
atlas = ExtResource("1_3vyb7")
region = Rect2(512, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w11d"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1024, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_770dr"]
atlas = ExtResource("1_3vyb7")
region = Rect2(1536, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_8f1cb"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2048, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdulj"]
atlas = ExtResource("1_3vyb7")
region = Rect2(2560, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_vau08"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3072, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsb7e"]
atlas = ExtResource("1_3vyb7")
region = Rect2(3584, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjsmb"]
atlas = ExtResource("1_3vyb7")
region = Rect2(4096, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwp2n"]
atlas = ExtResource("1_3vyb7")
region = Rect2(4608, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yhus"]
atlas = ExtResource("1_3vyb7")
region = Rect2(5120, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlll7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(5632, 2048, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk6i7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(6144, 2048, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_6c3st"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74r1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8svfe")
}],
"loop": true,
"name": &"side_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a3c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42b1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7ic4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_au7lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nubpm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua5cf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51ujp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk41t")
}],
"loop": true,
"name": &"side_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuw3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8txt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w11d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_770dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8f1cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdulj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vau08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsb7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjsmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwp2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yhus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlll7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk6i7")
}],
"loop": true,
"name": &"side_walk",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1da1t"]
size = Vector2(158, 254)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 136.382
height = 503.531

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qhqgy"]
radius = 35.6786
height = 85.8629

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dqkch"]
radius = 28.6
height = 92.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 4
collision_mask = 26
script = ExtResource("1_g2els")

[node name="front" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-5.68434e-14, -5.68434e-14)
sprite_frames = SubResource("SpriteFrames_31cv2")
animation = &"attack"

[node name="back" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-3.38813e-21, -1)
sprite_frames = SubResource("SpriteFrames_lxlsd")
animation = &"back_attack"

[node name="side" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -13)
scale = Vector2(0.9, 0.9)
sprite_frames = SubResource("SpriteFrames_6c3st")
animation = &"side_walk"

[node name="PlayerCollison" type="CollisionShape2D" parent="."]
position = Vector2(-5, 0)
shape = SubResource("RectangleShape2D_1da1t")

[node name="Attack" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 24

[node name="AttackBack" type="CollisionShape2D" parent="Attack"]
position = Vector2(27, -117)
rotation = -1.31598
shape = SubResource("CapsuleShape2D_g2els")
disabled = true

[node name="AttackFront" type="CollisionShape2D" parent="Attack"]
position = Vector2(19, 29)
rotation = -1.91463
scale = Vector2(5, 5)
shape = SubResource("CapsuleShape2D_qhqgy")
disabled = true

[node name="AttackRight" type="CollisionShape2D" parent="Attack"]
position = Vector2(86, -1)
scale = Vector2(5, 5)
shape = SubResource("CapsuleShape2D_dqkch")
disabled = true

[node name="AttackLeft" type="CollisionShape2D" parent="Attack"]
position = Vector2(-105, -14)
scale = Vector2(5, 5)
shape = SubResource("CapsuleShape2D_dqkch")
disabled = true

[node name="HurtSound" type="AudioStreamPlayer" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.2, 0.2)
limit_left = 0
limit_top = 0
limit_right = 4600
limit_bottom = 3050
script = ExtResource("3_qhqgy")

[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
